# igvc-software

igvc_demo/: CMakeLists.txt  package.xml  setup.py
igvc_demo/igvc-line-detection/: CMakeLists.txt  HackathonPipeline.cpp  HackathonPipeline.h  main.cpp
igvc_description/: package.xml
igvc_description/urdf/: jessii.urdf.xacro
igvc_description/urdf/models/qualification/: model.config  model.sdf
igvc_description/urdf/worlds/: low_performance.world
igvc_gazebo/: package.xml
igvc_gazebo/launch/: low_performance.launch  qualification.launch
igvc_msgs/: CMakeLists.txt
igvc_msgs/msg/: line.msg  lineArray.msg
igvc_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml  octomap.yaml  octomap_sim.yaml  teb_local_planner_params.yaml
igvc_navigation/launch/: differential_drive.launch  mapper.launch  octomap.yaml
igvc_navigation/src/mapper/: map_utils.cpp  map_utils.h  mapper.cpp  mapper.h  octomapper.cpp  octomapper.h  ros_mapper.cpp  ros_mapper.h  unrolling_layer.h
igvc_perception/: CMakeLists.txt
igvc_perception/config/: pointcloud_filter.yaml
igvc_perception/launch/: extract_image.launch  projection.launch  vision.launch
igvc_perception/src/cnn/: cnn.py
igvc_perception/src/projection/: main.cpp
igvc_perception/src/train_eval/: IGVCDataset.py  cleanup_annotation.py  data_preparation_utils.py  test.txt  train.py  train.txt  train_test_generation.py  utils.py
igvc_platform/: package.xml
igvc_platform/launch/: lidar.launch  sensors.launch
igvc_rviz_plugins/configs/: jessii_conf.rviz
(+4 files in other folders)
